// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawingCanvas click_and_drag 1`] = `
<canvas
  data-snapshot-image="e1b6e6a133d3f7d56ea5672fba63d6ddbadf277767a1a87139aa713ab313e4bd1d581208d18ffad4e023ab8d8cd485c4a4d2a6c32e9dffcea564a78515055940"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;

exports[`drawingCanvas mousemove_multiple 1`] = `
<canvas
  data-snapshot-image="14478fcf3d521023fb54ef0243d09bd7bcbedc0361832bb42a46d2274d739570b4c2165cdfde4a31ca83650c8f12612ebc8644ed8f684259308540a18c392174"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;

exports[`drawingCanvas mousemove_singular 1`] = `
<canvas
  data-snapshot-image="10d332e8e7bf50779406875b4cd92169f3e4acd40d114021ff1a5a7c7405ca6008bd3df108c07d8e8c448525e6f8f819ca8118620ae8884838a17ebdfef707c0"
  data-testid="mousecanvas"
  height="400"
  id="mousecanvas"
  style="background-color: transparent; width: 400px; height: 400px; border: 1px solid #000000; grid-column: 2; grid-row: 1; position: absolute; left: 0px;"
  width="400"
/>
`;
